[package]
name = "vault-sync"
version = "0.8.1"
authors = ["Pavel Chekin <pbchekin@gmail.com>"]
edition = "2021"

[dependencies]
clap = "2.34.0"
ctrlc = { version = "3.2.3", features = ["termination"] }
hashicorp_vault = "2.1.1"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.107"
serde_repr = "0.1.16"
serde_yaml = "0.9.25"
simplelog = "0.12.0"
